--- a/charts/keda/templates/crds/crd-scaledjobs.yaml
+++ b/charts/keda/templates/crds/crd-scaledjobs.yaml
@@ -3,6 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
     controller-gen.kubebuilder.io/version: v0.13.0
     {{- if (or .Values.crds.additionalAnnotations .Values.additionalAnnotations) }}
     {{- toYaml (merge .Values.crds.additionalAnnotations .Values.additionalAnnotations) | nindent 4 }}
