--- a/charts/traefik-admin/templates/nginx-fallback-html-cm.yaml
+++ b/charts/traefik-admin/templates/nginx-fallback-html-cm.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
   labels:
     {{- include "traefik.labels" . | nindent 4 }}
     k8s-app: nginx-fallback
