--- a/charts/traefik-admin/templates/nginx-fallback-html-cm.yaml
+++ b/charts/traefik-admin/templates/nginx-fallback-html-cm.yaml
@@ -150,6 +150,12 @@ data:
     </div>
     </body>
     </html>
+  healthcheck.html: |
+    <!DOCTYPE html>
+    <html>
+    <head><title>Healthckeck</title></head>
+    <body>OK</body>
+    </html>
   index.html: |
     <!DOCTYPE html>
     <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
