Also match the network load balancer's dns name / change fallback html

--- a/charts/samlproxy/templates/ingressroute.yaml
+++ b/charts/samlproxy/templates/ingressroute.yaml
@@ -11,7 +11,7 @@ spec:
     - websecure
   routes:
   - kind: Rule
-    match: Host(`{{ tpl (required "missing required value: .Values.proxy.hostname" .Values.proxy.hostname) $ }}`)
+    match: Host(`{{ tpl (required "missing required value: .Values.proxy.hostname" .Values.proxy.hostname) $ }}`) || Host(`{{ tpl (required "missing required value: .Values.proxy.nlbhostname" .Values.proxy.nlbhostname) $ }}`)
     services:
     - kind: Service
       name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "samlproxy.fullname" . }}-{{.Values.stage}}
