--- a/charts/samlproxy/values.yaml
+++ b/charts/samlproxy/values.yaml
@@ -53,4 +53,5 @@ affinity:
 
 proxy:
   backend: https://awsd-svc-hydra-dataplatform-traefik-admin-dev.awsd-ns-hydra-dataplatform-traefik-admin-dev.svc
-  hostname: hnd-nlb-hydra-dataplatform-admin-7a1d846d5e00a3dc.elb.eu-west-1.amazonaws.com
+  hostname: k8s.example.com
+  nlbhostname: hnd-nlb-hydra-dataplatform-admin-7a1d846d5e00a3dc.elb.eu-west-1.amazonaws.com
