--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -250,7 +250,7 @@ configs:
     # -- Directory path that contains additional static assets
     server.staticassets: /shared/app
     # -- Disable Argo CD RBAC for user authentication
-    server.disable.auth: false
+    server.disable.auth: true
     # -- Enable GZIP compression
     server.enable.gzip: true
     # -- Set X-Frame-Options header in HTTP responses to value. To disable, set to "".
