Change secret's name

--- a/charts/nifi-registry/templates/externalsecret.yaml
+++ b/charts/nifi-registry/templates/externalsecret.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   data:
   - remoteRef:
-      key: {{.Values.awsAccount}}-secret-{{.Values.customer}}-{{.Values.purpose}}-gitlab-token-{{.Values.stage}}
+      key: {{.Values.awsAccount}}-secret-{{.Values.customer}}-{{.Values.purpose}}-gitlab-tokens-{{.Values.stage}}
       property: gitlab-token-{{ include "nifi-registry.fullname" . }}
     secretKey: token
   refreshInterval: 12h
