--- a/charts/external-secrets/templates/cert-controller-rbac.yaml
+++ b/charts/external-secrets/templates/cert-controller-rbac.yaml
@@ -73,6 +73,6 @@ roleRef:
   name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-cc-{{.Values.stage}}
 subjects:
   - name: {{ include "external-secrets-cert-controller.serviceAccountName" . }}
-    namespace: {{ .Release.Namespace | quote }}
+    namespace: {{ template "external-secrets.namespace" . }}
     kind: ServiceAccount
 {{- end }}
