--- a/charts/external-secrets/templates/crds/ecrauthorizationtoken.yaml
+++ b/charts/external-secrets/templates/crds/ecrauthorizationtoken.yaml
@@ -7,9 +7,9 @@ metadata:
     {{- toYaml . | nindent 4}}
     {{- end }}
     {{- if and .Values.crds.conversion.enabled .Values.webhook.certManager.enabled .Values.webhook.certManager.addInjectorAnnotations }}
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-wh-{{.Values.stage}}
+    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "external-secrets.fullname" . }}-webhook
     {{- end }}
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   name: ecrauthorizationtokens.generators.external-secrets.io
 spec:
   group: generators.external-secrets.io
@@ -168,7 +168,7 @@ spec:
         - v1
       clientConfig:
         service:
-          name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-wh-{{.Values.stage}}
+          name: {{ include "external-secrets.fullname" . }}-webhook
           namespace: {{ .Release.Namespace | quote }}
           path: /convert
 {{- end }}
