--- a/charts/external-secrets/templates/crds/githubaccesstoken.yaml
+++ b/charts/external-secrets/templates/crds/githubaccesstoken.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- toYaml . | nindent 4}}
     {{- end }}
     {{- if and .Values.crds.conversion.enabled .Values.webhook.certManager.enabled .Values.webhook.certManager.addInjectorAnnotations }}
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "external-secrets.fullname" . }}-webhook
+    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{.Values.k8sPrefix}}-certificate-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-wh-{{.Values.stage}}
     {{- end }}
     controller-gen.kubebuilder.io/version: v0.15.0
   name: githubaccesstokens.generators.external-secrets.io
@@ -103,7 +103,7 @@ spec:
         - v1
       clientConfig:
         service:
-          name: {{ include "external-secrets.fullname" . }}-webhook
+          name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-wh-{{.Values.stage}}
           namespace: {{ .Release.Namespace | quote }}
           path: /convert
 {{- end }}
